2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp: 

2014-02-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-02-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* PointSet.x3dv: 

2014-02-19  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl: 

2014-02-16  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* gears.wrl:
	* X3DDialogInterface.cpp:
	* BrowserSelection.cpp: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeViewEditor.cpp: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserSelection.cpp:
	* X3DOutlineTreeView.cpp: 

2014-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* UndoStep.h:
	* UndoStep.cpp:
	* UndoHistory.h:
	* UndoHistory.cpp:
	* BrowserWindow.cpp:
	* LibraryView.h:
	* X3DBrowserEditor.h:
	* OutlineTree.h:
	* LibraryView.cpp:
	* X3DBrowserEditor.cpp:
	* Configuration.h:
	* MaterialEditor.h:
	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.h: 

2014-02-08  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoStep.cpp:
	* UndoHistory.cpp: 

2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoHistory.h:
	* LibraryView.h:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* LibraryView.cpp:
	* OutlineTree.h:
	* X3DBrowserEditor.cpp:
	* Configuration.h:
	* MaterialEditor.h:
	* OutlineTreeModel.h:
	* X3DOutlineTreeView.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.h: 

2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-02-06  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui: 

2014-02-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotor.x3dv: 

2014-02-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeData.h:
	* OutlineTreeData.cpp:
	* OutlineSelection.cpp: 

2014-02-02  Holger Seelig  <holger.seelig@yahoo.de>
