@@ -1,5 +1,9 @@
 2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.cpp: 
+
+2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserWidget.cpp: 
 
 2014-02-23  Holger Seelig  <holger.seelig@yahoo.de>
